entire module builds