@@ -1,9 +1,8 @@
 package example.substance.export;
 
 
-import com.fasterxml.jackson.core.JsonProcessingException;
 import tools.jackson.databind.JsonNode;
-import com.fasterxml.jackson.databind.ObjectMapper;
+import tools.jackson.databind.json.JsonMapper;
 import tools.jackson.databind.node.JsonNodeFactory;
 import tools.jackson.databind.node.ObjectNode;
 import gsrs.module.substance.scrubbers.basic.BasicSubstanceScrubberParameters;
@@ -14,17 +13,20 @@ import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 
 import java.util.Arrays;
+import java.util.List;
 
 public class ExportConfigTest {
-    @Test
-    public void testConfiguration1() throws JsonProcessingException {
 
-        ObjectMapper objectMapper = new ObjectMapper();
+    private final JsonMapper mapper = JsonMapper.builderWithJackson2Defaults().build();
+
+    @Test
+    public void testConfiguration1() {
+
         ExporterSpecificExportSettings exporterSpecificExportSettings = ExporterSpecificExportSettings.builder()
                 .columnNames(Arrays.asList("PT", "UNII", "UUID"))
                 .includeRepeatingDataOnEveryRow(false)
                 .build();
-        JsonNode exporterSettings = objectMapper.valueToTree(exporterSpecificExportSettings);
+        JsonNode exporterSettings = mapper.valueToTree(exporterSpecificExportSettings);
         GeneralExportSettings generalExportSettings = GeneralExportSettings.builder()
                 .approvalIdCodeSystem("Universal Approval Code")
                 .copyApprovalIdToCode(true)
@@ -38,7 +40,6 @@ public class ExportConfigTest {
                 .configurationKey("Basic SDFiles")
                 .configurationId("1892")
                 .build();
-        ObjectMapper mapper = new ObjectMapper();
 
         String configString =mapper.writeValueAsString(settings);
         System.out.println(configString);
@@ -48,7 +49,6 @@ public class ExportConfigTest {
 
     @Test
     public void testScrubberConfig() {
-        ObjectMapper objectMapper = new ObjectMapper();
         ObjectNode scrubberSettings = JsonNodeFactory.instance.objectNode();
         scrubberSettings.put("removeAllDates", true);
         scrubberSettings.put("removeAllAuditUser", false);
@@ -61,17 +61,16 @@ public class ExportConfigTest {
     }
 
     @Test
-    public void testScrubberSchema() throws JsonProcessingException {
+    public void testScrubberSchema() {
         BasicSubstanceScrubberParameters schema = new BasicSubstanceScrubberParameters();
-        schema.setRemoveAllLockedAccessGroupsToInclude( Arrays.asList( "Center for top-secret research"));
+        schema.setRemoveAllLockedAccessGroupsToInclude(List.of("Center for top-secret research"));
         schema.setRemoveCodesBySystemCodeSystemsToKeep(Arrays.asList("CAS", "ChemSpider"));
         schema.setApprovalIdCleanupApprovalIdCodeSystem("Approval ID");
         schema.setChangeAllStatuses(false);
         schema.setAuditInformationCleanupDeidentifyAuditUser(false);
         schema.setRemoveReferencesByCriteria(true);
         schema.setRemoveReferencesByCriteriaReferenceTypesToRemove( Arrays.asList("IND", "NDA"));
-        ObjectMapper objectMapper = new ObjectMapper();
-        String schemaString = objectMapper.writeValueAsString(schema);
+        String schemaString = mapper.writeValueAsString(schema);
         System.out.printf("schemaString: %s", schemaString);
         Assertions.assertTrue(schemaString.length()>0);
     }
